Update structure, add tests and basic producer/effect traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,11 @@ authors = ["sndnv"]
 
 [dependencies]
 ndarray = "0.10.0"
+
+[lib]
+name = "owe"
+path = "src/lib.rs"
+
+[[bin]]
+name = "owebin"
+path = "src/main.rs"
